--- a/Jooke/.project
+++ b/Jooke/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JookeOld</name>
+	<name>Jooke</name>
 	<comment></comment>
 	<projects>
 	</projects>
